src/main/resources/Krakatau-master/tests/assembler/bad/bscpmixup.j
.class public whocares
.super java/lang/Object

.const [bs:0] = Bootstrap [1] :
.end class
